[FIX] SpyOn templates are not jasmine 2.0 compliant

--- a/templates/Jasmine.xml
+++ b/templates/Jasmine.xml
@@ -7,9 +7,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -23,9 +23,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -38,9 +38,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -53,9 +53,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -69,9 +69,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -85,9 +85,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -102,9 +102,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -119,9 +119,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -135,9 +135,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -151,9 +151,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -167,9 +167,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -183,9 +183,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -200,9 +200,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -216,9 +216,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -233,9 +233,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -250,9 +250,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -266,9 +266,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -282,9 +282,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -298,9 +298,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -314,9 +314,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -331,9 +331,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -348,15 +348,15 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
     </context>
   </template>
-  <template name="sr" value="spyOn($VAL0$, '$VAL1$').andReturn($VAL2$);$END$&#10;" description="spy on and return" toReformat="true" toShortenFQNames="true">
+  <template name="sr" value="spyOn($VAL0$, '$VAL1$').and.returnValue($VAL2$);$END$&#10;" description="spy on and return" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL2" expression="" defaultValue="" alwaysStopAt="true" />
@@ -366,15 +366,15 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
     </context>
   </template>
-  <template name="st" value="spyOn($VAL0$, '$VAL1$').andThrow($VAL2);$END$&#10;" description="spy on and throw" toReformat="true" toShortenFQNames="true">
+  <template name="st" value="spyOn($VAL0$, '$VAL1$').and.throwError($VAL2);$END$&#10;" description="spy on and throw" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -383,15 +383,15 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
     </context>
   </template>
-  <template name="sct" value="spyOn($VAL0$, '$VAL1$').andCallThrough();$END$&#10;" description="spy on and call through" toReformat="true" toShortenFQNames="true">
+  <template name="sct" value="spyOn($VAL0$, '$VAL1$').and.callThrough();$END$&#10;" description="spy on and call through" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -400,15 +400,15 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
     </context>
   </template>
-  <template name="scf" value="spyOn($VAL0, '$VAL1$').andCallFake($VAL2$);$END$&#10;" description="spy on and call fake" toReformat="true" toShortenFQNames="true">
+  <template name="scf" value="spyOn($VAL0, '$VAL1$').and.callFake($VAL2$);$END$&#10;" description="spy on and call fake" toReformat="true" toShortenFQNames="true">
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL2" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -417,9 +417,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -433,9 +433,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -450,9 +450,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -466,9 +466,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
@@ -483,9 +483,9 @@
       <option name="ASPECTJ" value="false" />
       <option name="JAVA_SCRIPT" value="true" />
       <option name="MAVEN" value="false" />
-      <option name="JSP" value="false" />
-      <option name="PHP" value="false" />
       <option name="GROOVY" value="false" />
+      <option name="PHP" value="false" />
+      <option name="JSP" value="false" />
       <option name="MXML" value="false" />
       <option name="SQL" value="false" />
       <option name="GSP" value="false" />
