--- a/templates/Jasmine.xml
+++ b/templates/Jasmine.xml
@@ -425,7 +425,7 @@
       <option name="GSP" value="false" />
     </context>
   </template>
-  <template name="esc" value="expect($VAL0$).toHaveBeenCalled();$END$&#10;" description="expect was called" toReformat="true" toShortenFQNames="true">
+  <template name="esc" value="expect($VAL0$).toHaveBeenCalled();$END$" description="expect was called" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
       <option name="HAML" value="false" />
@@ -441,7 +441,7 @@
       <option name="GSP" value="false" />
     </context>
   </template>
-  <template name="escw" value="expect($VAL0$).toHaveBeenCalledWith($VAL1$);$END$&#10;" description="expect was called with" toReformat="true" toShortenFQNames="true">
+  <template name="escw" value="expect($VAL0$).toHaveBeenCalledWith($VAL1$);$END$" description="expect was called with" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
