--- a/templates/Jasmine.xml
+++ b/templates/Jasmine.xml
@@ -339,7 +339,7 @@
       <option name="GSP" value="false" />
     </context>
   </template>
-  <template name="s" value="spyOn($VAL0$, '$VAL1$')$END$;&#10;" description="spy on" toReformat="true" toShortenFQNames="true">
+  <template name="s" value="spyOn($VAL0$, '$VAL1$');$END$" description="spy on" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -356,7 +356,7 @@
       <option name="GSP" value="false" />
     </context>
   </template>
-  <template name="sr" value="spyOn($VAL0$, '$VAL1$').and.returnValue($VAL2$);$END$&#10;" description="spy on and return" toReformat="true" toShortenFQNames="true">
+  <template name="sr" value="spyOn($VAL0$, '$VAL1$').and.returnValue($VAL2$);$END$" description="spy on and return" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL2" expression="" defaultValue="" alwaysStopAt="true" />
@@ -374,7 +374,7 @@
       <option name="GSP" value="false" />
     </context>
   </template>
-  <template name="st" value="spyOn($VAL0$, '$VAL1$').and.throwError($VAL2);$END$&#10;" description="spy on and throw" toReformat="true" toShortenFQNames="true">
+  <template name="st" value="spyOn($VAL0$, '$VAL1$').and.throwError($VAL2);$END$" description="spy on and throw" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -391,7 +391,7 @@
       <option name="GSP" value="false" />
     </context>
   </template>
-  <template name="sct" value="spyOn($VAL0$, '$VAL1$').and.callThrough();$END$&#10;" description="spy on and call through" toReformat="true" toShortenFQNames="true">
+  <template name="sct" value="spyOn($VAL0$, '$VAL1$').and.callThrough();$END$" description="spy on and call through" toReformat="true" toShortenFQNames="true">
     <variable name="VAL0" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
@@ -408,7 +408,7 @@
       <option name="GSP" value="false" />
     </context>
   </template>
-  <template name="scf" value="spyOn($VAL0, '$VAL1$').and.callFake($VAL2$);$END$&#10;" description="spy on and call fake" toReformat="true" toShortenFQNames="true">
+  <template name="scf" value="spyOn($VAL0, '$VAL1$').and.callFake($VAL2$);$END$" description="spy on and call fake" toReformat="true" toShortenFQNames="true">
     <variable name="VAL1" expression="" defaultValue="" alwaysStopAt="true" />
     <variable name="VAL2" expression="" defaultValue="" alwaysStopAt="true" />
     <context>
